// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markup Web does not render a script tag 1`] = `<div />`;

exports[`Markup Web does not render an image tag 1`] = `<div />`;

exports[`Markup Web renders a mixture of tags 1`] = `
<div>
  <div>
    <div
      dir="auto"
      href="http://www.google.com"
    >
      some link here
    </div>
  </div>
  <div>
    <strong>
      some text here
    </strong>
  </div>
  <div>
    <em>
       some more text here
    </em>
  </div>
  <div>
    <span>
      some other text here
    </span>
  </div>
</div>
`;

exports[`Markup Web renders a single paragraph 1`] = `
<p>
  This is the text for paragraph one
</p>
`;

exports[`Markup Web renders multiple children 1`] = `
<div
  dir="auto"
  style={
    Object {
      "color": "red",
    }
  }
>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders multiple paragraphs 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders multiple paragraphs with a pull quote 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      “
    </div>
    <div
      className="responsive-styles__component-fbPFZZ kssypV"
      dir="auto"
    >
      [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
    </div>
    <div>
      <div
        dir="auto"
        style={
          Object {
            "color": "rgba(105,105,105,1)",
          }
        }
      >
        Katie Glass
      </div>
    </div>
  </div>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders multiple paragraphs with ads 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <Ad
    pos="inline-ad"
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "marginBottom": "30px",
        "marginTop": "30px",
        "paddingBottom": "10px",
        "paddingTop": "10px",
      }
    }
  />
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders tags nested 1`] = `
<div
  dir="auto"
>
  Some text is here 
  <span
    dir="auto"
  >
    and there is some 
    <span
      dir="auto"
    >
      more text 
      <span>
        and in here
      </span>
    </span>
     after it too
  </span>
   and here
</div>
`;

exports[`Markup Web renders the bold tag 1`] = `
<strong>
  some text here
</strong>
`;

exports[`Markup Web renders the italic tag 1`] = `
<em>
   some more text here
</em>
`;

exports[`Markup Web renders the line break tag 1`] = `<br />`;

exports[`Markup Web renders the span tag 1`] = `
<span>
  some other text here
</span>
`;

exports[`Markup Web renders wrapped tags 1`] = `
<div
  dir="auto"
>
  Camilla Long is 
  <em>
    the Sunday Times
  </em>
   film critic. She also writes interviews and a column, and was named 
  <strong>
    interviewer of the year
  </strong>
   at the British Press Awards in 2010 and 2016.
</div>
`;
